Fix spacing, array value join

--- a/app/components/DescriptionList/index.scss
+++ b/app/components/DescriptionList/index.scss
@@ -25,10 +25,12 @@
 
   &__term {
     display: inline-flex;
+    flex-basis: 0;
     color: $palette__text--secondary;
   }
 
   &__value {
     display: inline-flex;
+    flex-basis: 0;
   }
 }
